--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="cards.js"></script>
   <script src="state.js"></script>
   <script src="components/ui.js"></script>
+  <script src="components/world.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
